--- a/css/style.css
+++ b/css/style.css
@@ -33,21 +33,55 @@
   display: block;
 }
 .img-container {
-  max-width: 18em;
-  max-height: 18em;
+  max-width: 12em;
+  max-height: 12em;
   width: 80%;
   height: 80vw;
-  background-size: cover;
   margin: auto;
+  padding: 2em;
 }
-.img-container.sun {
-  background-image: url("../img/sun.png");
+.img-container::after {
+  content: "";
+  display: inherit;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
 }
-.img-container.earth {
-  background-image: url("../img/earth.png");
+.img-container.yellow::after {
+  background-color: #ffff00;
 }
-.img-container.moon {
-  background-image: url("../img/moon.png");
+.img-container.yellowgreen::after {
+  background-color: #9acd32;
+}
+.img-container.green::after {
+  background-color: #008000;
+}
+.img-container.blue::after {
+  background-color: #0000ff;
+}
+.img-container.orange::after {
+  background-color: #ffa500;
+}
+.img-container.bluegreen::after {
+  background-color: #0d98ba;
+}
+.img-container.turquoise::after {
+  background-color: #40e0d0;
+}
+.img-container.magenta::after {
+  background-color: #ff00ff;
+}
+.img-container.red::after {
+  background-color: #ff0000;
+}
+.img-container.redorange::after {
+  background-color: #ff3333;
+}
+.img-container.indigo::after {
+  background-color: #4b0082;
+}
+.img-container.purple::after {
+  background-color: #800080;
 }
 .text {
   padding-bottom: 1em;
@@ -55,12 +89,39 @@
 .result {
   font-size: 2em;
 }
-.result.sun {
-  color: #c30101;
+.result.yellow {
+  color: #ffff00;
 }
-.result.earth {
-  color: #0101cb;
+.result.yellowgreen {
+  color: #9acd32;
 }
-.result.moon {
-  color: #cfcf01;
+.result.green {
+  color: #008000;
+}
+.result.blue {
+  color: #0000ff;
+}
+.result.orange {
+  color: #ffa500;
+}
+.result.bluegreen {
+  color: #00dddd;
+}
+.result.turquoise {
+  color: #40e0d0;
+}
+.result.magenta {
+  color: #ff00ff;
+}
+.result.red {
+  color: #ff0000;
+}
+.result.redorange {
+  color: #ff3333;
+}
+.result.indigo {
+  color: #4b0082;
+}
+.result.purple {
+  color: #800080;
 }
